--- a/Proyecto/proyecto/pom.xml
+++ b/Proyecto/proyecto/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 	
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 
 	<build>
